style: adjust both buttons margins for vertical alignment within container Apply auto margins to both .clickBtn and .clear-and-knob-btn to space out buttons layout. Ensures it is visually balanced vertical layout.

--- a/style.css
+++ b/style.css
@@ -41,3 +41,11 @@ body {
     border-radius: 10px;
     box-shadow: 0px 0px 5px 15px #942828;
 }
+
+.clickBtn{
+  margin-bottom: auto;
+}
+
+.clear-and-knob-btn{
+  margin-top: auto;
+}
